--- a/TinyLlamaChatApi/src/Dockerfile
+++ b/TinyLlamaChatApi/src/Dockerfile
@@ -2,8 +2,8 @@ FROM ubi8/python-311
 LABEL maintainer="kei.omizo@redhat.com"
 
 WORKDIR /app
-# USER root
-# RUN wget https://huggingface.co/TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF/resolve/main/tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf
+USER root
+RUN wget https://huggingface.co/TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF/resolve/main/tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf
 COPY . .
 RUN pip install -r requirements.txt
 
